# xcassets

./: Cargo.toml  LICENSE  README.md
examples/: bench_parse.rs  bench_references.rs
src/: diagnostics.rs  error.rs  lib.rs  model.rs  parser.rs  references.rs
tests/: parser.rs  references.rs
tests/fixtures/missing_reference/Assets.xcassets/Missing.imageset/: Contents.json
tests/fixtures/opaque_descendant/Assets.xcassets/Future.assetpack/: Contents.json
tests/fixtures/opaque_descendant/Assets.xcassets/Future.assetpack/Nested.imageset/: Contents.json
tests/fixtures/production_like/Assets.xcassets/AppActivityIcon.appiconset/: Contents.json
tests/fixtures/production_like/Assets.xcassets/Colors/medal_text_color.colorset/: Contents.json
tests/fixtures/production_like/Assets.xcassets/DailyTask/double_reward_banner.imageset/: Contents.json
tests/fixtures/production_like/Assets.xcassets/MemberCard/icon_kick_out.imageset/: Contents.json
tests/fixtures/production_like/Assets.xcassets/Navigator/icon_help.imageset/: Contents.json
tests/fixtures/production_like/Assets.xcassets/Special/icon_buy_title.imageset/: Contents.json
