[package]
name = "xcassets"
version = "0.1.0"
edition = "2024"
description = "Parse Xcode .xcassets catalogs into a typed Rust tree with diagnostics."
license = "MIT"
readme = "README.md"
repository = "https://github.com/WendellXY/xcassets"
homepage = "https://github.com/WendellXY/xcassets"
documentation = "https://docs.rs/xcassets"
keywords = ["xcassets", "xcode", "ios", "assets", "parser"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.14"
